Cycles Regression: Metaballs not updating in viewport. #91600

Closed
opened 2021-09-22 11:50:13 +02:00 by Jeroen Bakker · 5 comments
Member

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Intel(R) Iris(R) Plus Graphics Intel 4.5.0 - Build 30.0.100.9805

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-22 06:22, hash: 4c156cba21
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-09 06:22, hash: a131e3bec7
Worked: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-06, hash: d10ea97053

Short description of error
When in cycles viewport making changes to a meta ball isn't synced to cycles.

Exact steps for others to reproduce the error

  • Switch render engine to cycles
  • Add Meta ball
  • Set viewport shading mode to render preview
  • Move the meta-ball
  • Add new meta-ball

Looks like the changes aren't detected and aren't synced to cycles.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Intel(R) Iris(R) Plus Graphics Intel 4.5.0 - Build 30.0.100.9805 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-22 06:22, hash: `4c156cba21` Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-09 06:22, hash: `a131e3bec7` Worked: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-06, hash: `d10ea97053` **Short description of error** When in cycles viewport making changes to a meta ball isn't synced to cycles. **Exact steps for others to reproduce the error** * Switch render engine to cycles * Add Meta ball * Set viewport shading mode to render preview * Move the meta-ball * Add new meta-ball Looks like the changes aren't detected and aren't synced to cycles.
Author
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Jeroen Bakker changed title from Metaballs not updated in Cycles viewport. to Metaballs not updating in viewport. 2021-09-22 11:50:30 +02:00
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Alaska changed title from Metaballs not updating in viewport. to Cycles Regression: Metaballs not updating in viewport. 2021-09-22 12:22:55 +02:00

This issue was referenced by e57ce464c2

This issue was referenced by e57ce464c21f405edacbfb806114e3acfdcc1410

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-09-22 16:09:06 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91600
No description provided.