Fix T91600: Cycles viewport not updaing on metaball changes